--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,8 @@ dist-ssr
 *.sln
 *.sw?
 
-
 .env
+.env.*
 *.cache
 
-career-chatbot-frontend-firebase-adminsdk-fbsvc-a7250821b9.json
+*firebase-adminsdk*.json
