--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "smoke:onboarding": "node scripts/onboarding_smoke.mjs"
   },
   "dependencies": {
     "firebase": "^12.7.0",
