--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -17,6 +17,8 @@ jobs:
           cache: 'npm'
       - name: Install deps
         run: npm ci
+      - name: Test
+        run: npm test
       - name: Build
         run: npm run build
       - name: Upload dist artifact
