--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "smoke:onboarding": "node scripts/onboarding_smoke.mjs"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
     "firebase": "^12.7.0",
     "lucide-vue-next": "^0.562.0",
     "vue": "^3.5.24",
@@ -17,12 +20,12 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.20",
+    "jsdom": "^26.0.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
-    "vite": "npm:rolldown-vite@7.2.5"
-  },
-  "overrides": {
-    "vite": "npm:rolldown-vite@7.2.5"
+    "vite": "^6.0.0",
+    "vitest": "^2.1.8"
   }
 }
